--- a/ChromeExtension/popup.html
+++ b/ChromeExtension/popup.html
@@ -31,6 +31,7 @@
 
     <script src="js/jquery-3.3.1.slim.min.js"></script>
     <script src="js/bootstrap-4.3.1.min.js"></script>
+    <script src="js/lib.js"></script>
     <script src="js/popup.js"></script>
 </body>
 
