--- a/index.html
+++ b/index.html
@@ -3,4 +3,7 @@
   <head>
     <meta http-equiv="Refresh" content="0; url=https://table2site.com/site/carleslc-resources" />
   </head>
+  <body>
+    <p>You are being redirected to <a href="https://table2site.com/site/carleslc-resources">https://table2site.com/site/carleslc-resources</a></p>
+  </body>
 </html>
