--- a/index.html
+++ b/index.html
@@ -1,9 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="Refresh" content="0; url=https://table2site.com/site/carleslc-resources" />
-  </head>
-  <body>
-    <p>You are being redirected to <a href="https://table2site.com/site/carleslc-resources">https://table2site.com/site/carleslc-resources</a></p>
-  </body>
+
+<head>
+  <meta http-equiv="Refresh" content="0; url=https://table2site.com/site/carleslc-resources"/>
+  <title>Recursos</title>
+  <meta name="author" content="Carlos Lázaro Costa">
+  <meta property="og:site_name" content="Recursos">
+  <meta property="og:title" content="Recursos">
+  <meta property="og:description" content="Lista de herramientas y servicios para prototipado, diseño, análisis y desarrollo.">
+  <meta name="description" content="Lista de herramientas y servicios para prototipado, diseño, análisis y desarrollo.">
+  <link rel=”shortcut icon” type=”image/png” href=”https://i.imgur.com/5BWO7uS.png”/> <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>
+  <div class="bg">
+    <div id="overlay-header">
+      <div class="text-center center">
+        <div class="container">
+          <div class="row spinner-border text-light" role="status">
+            <span class="sr-only">Loading...</span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="foot-message">
+      <p class="text-white">You are being redirected to <a class="text-warning" href="https://table2site.com/site/carleslc-resources">https://table2site.com/site/carleslc-resources</p>
+    </div>
+  </div>
+</body>
+
 </html>
