--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <meta property="og:title" content="Recursos">
   <meta property="og:description" content="Lista de herramientas y servicios para prototipado, diseño, análisis y desarrollo.">
   <meta name="description" content="Lista de herramientas y servicios para prototipado, diseño, análisis y desarrollo.">
-  <link rel=”shortcut icon” type=”image/png” href=”https://i.imgur.com/5BWO7uS.png”/> <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel=”shortcut icon” type=”image/png” href=”https://i.imgur.com/5BWO7uS.png”/>
+  <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
