--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="author" content="Carlos Lázaro Costa">
   <meta property="og:site_name" content="Recursos">
   <meta property="og:title" content="Recursos">
-  <meta property="og:description" content="Lista de herramientas y servicios para prototipado, diseño, análisis y desarrollo.">
-  <meta name="description" content="Lista de herramientas y servicios para prototipado, diseño, análisis y desarrollo.">
+  <meta property="og:description" content="Lista colaborativa de herramientas y servicios para aprendizaje, prototipado, diseño, análisis, gestión y desarrollo, entre otros.">
+  <meta name="description" content="Lista colaborativa de herramientas y servicios para aprendizaje, prototipado, diseño, análisis, gestión y desarrollo, entre otros.">
   <link rel=”shortcut icon” type=”image/png” href=”https://i.imgur.com/5BWO7uS.png”/>
   <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
