--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta property="og:site_name" content="Recursos">
   <meta property="og:title" content="Recursos">
   <meta property="og:description" content="Lista colaborativa de herramientas y servicios para aprendizaje, prototipado, diseño, análisis, gestión y desarrollo, entre otros.">
+  <meta property="og:image" content="background.jpeg">
   <meta name="description" content="Lista colaborativa de herramientas y servicios para aprendizaje, prototipado, diseño, análisis, gestión y desarrollo, entre otros.">
   <link rel=”shortcut icon” type=”image/png” href=”https://i.imgur.com/5BWO7uS.png”/>
   <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
