--- a/ChromeExtension/popup.html
+++ b/ChromeExtension/popup.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Añade un recurso a https://carleslc.me/resources">
     <meta name="author" content="Carlos Lázaro Costa">
     
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap-5.3.3.min.css">
     <link rel="stylesheet" href="css/popup.css">
 </head>
 
@@ -28,8 +28,8 @@
         <button id="add-btn" class="btn btn-success btn-block" disabled>Añadir recurso</button>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="js/bootstrap-5.3.3.min.js"></script>
     <script src="js/lib.js"></script>
     <script src="js/popup.js"></script>
 </body>
